--- a/nextjs/app/globals.css
+++ b/nextjs/app/globals.css
@@ -42,8 +42,8 @@ body {
 
   height: 100%;
   box-sizing: border-box;
-  /* background: rbg(220, 220, 220); */
-  background: yellow;
+  background: rbg(220, 220, 220);
+  /* background: yellow; */
   border-radius: 5px;
   box-shadow:
     0px 0px 3px gray inset,
